[Refactor] album, config패키지 리팩토링