@@ -2,17 +2,13 @@ package me.snaptime.album.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import me.snaptime.album.domain.Album;
-import me.snaptime.album.dto.req.CreateAlbumReqDto;
-import me.snaptime.album.dto.res.FindAlbumResDto;
-import me.snaptime.album.dto.res.FindAllAlbumsResDto;
-import me.snaptime.album.dto.res.GetAllAlbumListResDto;
+import me.snaptime.album.dto.res.AlbumFindResDto;
 import me.snaptime.album.repository.AlbumRepository;
 import me.snaptime.album.service.AlbumService;
 import me.snaptime.component.url.UrlComponent;
 import me.snaptime.exception.CustomException;
 import me.snaptime.exception.ExceptionCode;
 import me.snaptime.snap.domain.Snap;
-import me.snaptime.snap.dto.res.SnapFindResDto;
 import me.snaptime.snap.repository.SnapRepository;
 import me.snaptime.user.domain.User;
 import me.snaptime.user.repository.UserRepository;
@@ -20,160 +16,151 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Comparator;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class AlbumServiceImpl implements AlbumService {
+
     private final UserRepository userRepository;
     private final AlbumRepository albumRepository;
     private final UrlComponent urlComponent;
     private final SnapRepository snapRepository;
 
-    @Value(value = "${nonClassification.name}")
-    private String nonClassificationName;
+    @Value(value = "${basicAlbumName}")
+    private String basicAlbumName;
 
     @Override
-    @Transactional(readOnly = true)
-    public List<FindAllAlbumsResDto> findAllAlbumsByLoginId(String uid) {
-        User foundUser = userRepository.findByLoginId(uid).orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
-        List<Album> foundAlbums = albumRepository.findAlbumsByUser(foundUser);
-        return foundAlbums.stream().map(album -> {
-            Optional<Snap> firstSnapOptional = album.getSnaps().isEmpty() ? Optional.empty() : Optional.of(album.getSnaps().get(0));
-            String photoUrl = firstSnapOptional.map(snap -> urlComponent.makePhotoURL(snap.getFileName(), snap.isPrivate())).orElse(null);
-            return FindAllAlbumsResDto.builder()
-                    .id(album.getAlbumId())
-                    .name(album.getAlbumName())
-                    .photoUrl(photoUrl)
-                    .build();
-        }).toList();
+    public List<AlbumFindResDto> findAllAlbumsWithThumnail(String reqLoginId) {
+
+        User reqUser = userRepository.findByLoginId(reqLoginId)
+                .orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
+
+        List<Album> albums = albumRepository.findAllByUser(reqUser);
+
+        return albums.stream().map(album -> {
+            String thumbnailPhotoURL = findAlbumThumbnailPhotoURL(album);
+            return AlbumFindResDto.toDto(album,thumbnailPhotoURL);
+        }).collect(Collectors.toList());
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public FindAlbumResDto findAlbum(String uId, Long album_id) {
-        Album foundAlbum = albumRepository.findById(album_id).orElseThrow(() -> new CustomException(ExceptionCode.ALBUM_NOT_EXIST));
-        User foundUser = userRepository.findByLoginId(uId).orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
-        try {
-            isUserHavePermission(foundUser, album_id);
-        } catch (CustomException e) {
-            /*
-            * 유저가 없거나, 권한이 없으면 공개인 것만 유저에게 반환한다.
-            * */
-            return FindAlbumResDto.builder()
-                    .id(foundAlbum.getAlbumId())
-                    .name(foundAlbum.getAlbumName())
-                    .snap(foundAlbum.getSnaps().stream()
-                            .sorted(Comparator.comparing(Snap::getSnapId).reversed())
-                            .filter( snap -> !snap.isPrivate())
-                            .map(snap ->
-                                    SnapFindResDto.entityToResDto(
-                                            snap,
-                                            urlComponent.makePhotoURL(snap.getFileName(), false),
-                                            urlComponent.makeProfileURL(snap.getUser().getProfilePhoto().getProfilePhotoId())
-                                    )
-                            )
-                            .collect(Collectors.toList()))
-                    .build();
+    public List<AlbumFindResDto> findAllAlbums(String reqLoginId) {
+
+        User reqUser = userRepository.findByLoginId(reqLoginId)
+                .orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
+
+        return albumRepository.findAllByUser(reqUser).stream().map(album ->
+                        AlbumFindResDto.toDto(album,null)).collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional
+    public void addAlbum(String reqLoginId, String albumName) {
+
+        User reqUser = userRepository.findByLoginId(reqLoginId)
+                .orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
+
+        albumRepository.save(
+                Album.builder()
+                .albumName(albumName)
+                .user(reqUser)
+                .build());
+    }
+
+    @Override
+    @Transactional
+    public void updateAlbumName(String reqLoginId, Long albumId, String newAlbumName) {
+
+        User reqUser = userRepository.findByLoginId(reqLoginId)
+                .orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
+
+        Album album = albumRepository.findById(albumId)
+                .orElseThrow(() -> new CustomException(ExceptionCode.ALBUM_NOT_EXIST));
+
+        isMyAlbum(reqUser,album);
+        Album basicAlbum = findBasicAlbum(reqUser);
+
+        // 수정하려는 앨범이 기본앨범이면 예외반환
+        if(basicAlbum.getAlbumId().equals(albumId)) {
+            throw new CustomException(ExceptionCode.BASIC_ALBUM_CANNOT_BE_MODIFIED_OR_DELETED);
         }
 
-        return FindAlbumResDto.builder()
-                .id(foundAlbum.getAlbumId())
-                .name(foundAlbum.getAlbumName())
-                .snap(foundAlbum.getSnaps().stream()
-                        .sorted(Comparator.comparing(Snap::getSnapId).reversed())
-                        .map(snap ->
-                                SnapFindResDto.entityToResDto(
-                                        snap,
-                                        urlComponent.makePhotoURL(snap.getFileName(), snap.isPrivate()),
-                                        urlComponent.makeProfileURL(snap.getUser().getProfilePhoto().getProfilePhotoId())
-                                )
-                        )
-                        .collect(Collectors.toList()))
+        album.updateAlbumName(newAlbumName);
+    }
+
+    @Override
+    @Transactional
+    public void deleteAlbum(String reqLoginId, Long albumId) {
+
+        User reqUser = userRepository.findByLoginId(reqLoginId)
+                .orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
+
+        Album album = albumRepository.findById(albumId)
+                .orElseThrow(() -> new CustomException(ExceptionCode.ALBUM_NOT_EXIST));
+
+        isMyAlbum(reqUser, album);
+        Album basicAlbum = findBasicAlbum(reqUser);
+
+        // 삭제하려는 앨범이 기본앨범이면 예외반환
+        if(basicAlbum.getAlbumId().equals(albumId)) {
+            throw new CustomException(ExceptionCode.BASIC_ALBUM_CANNOT_BE_MODIFIED_OR_DELETED);
+        }
+
+        // 삭제될 앨범안에 있는 스냅을 기본앨범으로 이동
+        List<Snap> snaps = album.getSnaps();
+        snaps.forEach(snap -> snap.updateAlbum(basicAlbum));
+        album.resetSnapsForDelete();
+
+        // Album-snap 관계에 고아객체 제거를 true로 설정하지 않았기때문에 snap이 삭제가 되지 않는다.
+        snapRepository.saveAll(snaps);
+        albumRepository.delete(album);
+    }
+
+    @Override
+    public Album findBasicAlbum(User user) {
+
+        // 해당 유저의 모든 앨범을 조회
+        Optional<Album> basicAlbumOptional = albumRepository.findBasicAlbumByUser(user);
+
+        if(basicAlbumOptional.isEmpty())
+            throw new CustomException(ExceptionCode.BASIC_ALBUM_NOT_EXIST);
+
+        return basicAlbumOptional.get();
+    }
+
+    @Override
+    public void addBasicAlbum(User user) {
+
+        Album basicAlbum = Album.builder()
+                .user(user)
+                .albumName(basicAlbumName)
                 .build();
 
+        albumRepository.save(basicAlbum);
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public boolean isAlbumExistById(Long album_id) {
-       return albumRepository.findById(album_id).isPresent();
-    }
+    public void isMyAlbum(User user, Album album) {
 
-    @Override
-    public boolean isNonClassificationExist(User user) {
-        List<Album> foundAlbums = albumRepository.findAlbumsByUser(user);
-        return foundAlbums.stream().anyMatch(album -> Objects.equals(album.getAlbumName(), nonClassificationName));
-    }
-
-    @Override
-    public Long findUserNonClassificationId(User user) {
-        List<Album> foundAlbums = albumRepository.findAlbumsByUser(user);
-        return foundAlbums.stream().filter(album -> Objects.equals(album.getAlbumName(), nonClassificationName)).findFirst().map(Album::getAlbumId).orElseThrow(() -> new CustomException(ExceptionCode.NON_CLASSIFICATION_ALBUM_IS_NOT_EXIST));
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<GetAllAlbumListResDto> getAlbumListByLoginId(String uid) {
-        User foundUser = userRepository.findByLoginId(uid).orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
-        return albumRepository.findAlbumsByUser(foundUser).stream().map(album -> GetAllAlbumListResDto.builder().id(album.getAlbumId()).name(album.getAlbumName()).build()).toList();
-    }
-
-    @Override
-    @Transactional
-    public void createAlbum(CreateAlbumReqDto createAlbumReqDto, String uid) {
-        User foundUser = userRepository.findByLoginId(uid).orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
-        albumRepository.save(Album.builder().albumName(createAlbumReqDto.name()).user(foundUser).build());
-    }
-
-    @Override
-    public Long createNonClassificationAlbum(User user) {
-        Album result = albumRepository.save(Album.builder().albumName(nonClassificationName).user(user).build());
-        return result.getAlbumId();
-    }
-
-    @Override
-    @Transactional
-    public void modifyAlbumName(Long album_id, String album_name) {
-        Album foundAlbum = albumRepository.findById(album_id).orElseThrow(() -> new CustomException(ExceptionCode.ALBUM_NOT_EXIST));
-        foundAlbum.updateAlbumName(album_name);
-    }
-
-    @Override
-    @Transactional
-    public void removeAlbum(String uId, Long album_id) {
-        User foundUser = userRepository.findByLoginId(uId).orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_EXIST));
-        isUserHavePermission(foundUser, album_id);
-        Album foundAlbum = albumRepository.findById(album_id).orElseThrow(() -> new CustomException(ExceptionCode.ALBUM_NOT_EXIST));
-        // 사용자가 가지고 있는 non-classification id를 가져온다.
-        Long foundNonClassificationId = findUserNonClassificationId(foundUser);
-        if  (foundNonClassificationId.equals(album_id)) {
-            throw new CustomException(ExceptionCode.NOT_DELETE_NON_CLASSIFICATION_ALBUM);
-        }
-        Album nonClassificationAlbum = albumRepository.findById(foundNonClassificationId).orElseThrow(() -> new CustomException(ExceptionCode.NON_CLASSIFICATION_ALBUM_IS_NOT_EXIST));
-        // 앨범과 연관관계가 맺어져있는 snap들의 목록을 가져온다
-        List<Snap> snapList = foundAlbum.getSnaps();
-        for (Snap snap: snapList) {
-            // non-classification Snap과 앨범을 연관관계 맺어준다.
-            snap.associateAlbum(nonClassificationAlbum);
-        }
-        // DB에 반영한다.
-        snapRepository.saveAll(snapList);
-        albumRepository.delete(foundAlbum);
-    }
-
-    /*
-    * 인자로 uId와 album을 받아 album을 생성한 사용자가 현재 요청을 보낸 사용자와 일치하는지 확인하는 메소드입니다.
-    * */
-    @Override
-    public void isUserHavePermission(User user, Long album_id) {
-        Album foundAlbum = albumRepository.findById(album_id).orElseThrow(() -> new CustomException(ExceptionCode.ALBUM_NOT_EXIST));
-        if(!(Objects.equals(foundAlbum.getUser().getUserId(), user.getUserId()))){
+        if( album.getUser().getUserId() != user.getUserId() ){
             throw new CustomException(ExceptionCode.ALBUM_USER_NOT_MATCH);
         }
     }
+
+    private String findAlbumThumbnailPhotoURL(Album album){
+
+        Optional<Snap> thumnailSnapOptional = snapRepository.findThumnailSnap(album);
+
+        if(thumnailSnapOptional.isEmpty())
+            return null;
+        else{
+            Snap thumnailSnap = thumnailSnapOptional.get();
+            return urlComponent.makePhotoURL(thumnailSnap.getFileName(), false);
+        }
+    }
+
 }
